[tool.poetry]
name = "hb-get"
version = "0.1.0"
description = ""
authors = ["Cameron Blankenbuehler <cameron.blankenbuehler@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"
bs4 = "^0.0.1"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
